2011-10-26  Julien Chaffraix  <jchaffraix@webkit.org>

        Unreviewed, rolling out r98486.
        http://trac.webkit.org/changeset/98486
        https://bugs.webkit.org/show_bug.cgi?id=70748

        Broke Chromium's test_expectation.txt

        * platform/graphics/skia/PlatformContextSkia.cpp:
        (WebCore::PlatformContextSkia::State::State):
        (WebCore::PlatformContextSkia::State::cloneInheritedProperties):
        (WebCore::PlatformContextSkia::clipPathAntiAliased):
        (WebCore::PlatformContextSkia::restore):
        (WebCore::PlatformContextSkia::applyAntiAliasedClipPaths):
        * platform/graphics/skia/PlatformContextSkia.h:

2011-10-26  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/10350775> REGRESSION (r97032): Slider thumb is not drawn
        https://bugs.webkit.org/show_bug.cgi?id=70891

        Reviewed by Anders Carlsson.

        * platform/mac/ThemeMac.mm:
        (WebCore::ThemeMac::ensuredView): Set the WebCoreFlippedView’s size, because NSSliderCell
        always shrinks the slider thumb to fit in the control view’s bounds.
        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::paintSliderThumb): Removed workaround code no longer needed after
        r97032.

2011-10-26  Chris Rogers  <crogers@google.com>

        Add AudioSourceProviderClient and setFormat() method so we can know audio stream format
        https://bugs.webkit.org/show_bug.cgi?id=70155

        Reviewed by Eric Carlson.

        No new tests.  There isn't yet an implementation to test.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::createMediaPlayer):
        (WebCore::HTMLMediaElement::setAudioSourceNode):
        Let MediaPlayer know about the MediaElementAudioSourceNode so it can callback with audio stream format information.
        * platform/audio/AudioSourceProvider.h:
        (WebCore::AudioSourceProvider::setClient):